--- a/css/main.css
+++ b/css/main.css
@@ -13,17 +13,31 @@
     element selector
 } */
 
+/* Import Google Fonts */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&family=Source+Code+Pro:wght@400;700&display=swap');
+
 
 body { 
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    font-weight: 400;
+
+    background-color: grey;
+    background-image: url("../assets/imm-news-network-010pattern.png");
+    background-size: 100vw;
+    background-repeat: repeat;
+    background-position: center;
 }
 
-h1 {
-
+h1, h2, h3, h4, h5 {
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 700;
     font-size: 1.5em;
 
 }
+
+
 
 
 
