--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,14 @@ h1, h2, h3, h4, h5 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 700;
     font-size: 1.5em;
+    position: relative;
+    left: 30px;
+}
 
+.previewText{
+
+    font-size: 18px;
+    
 }
 
 /* unvisited link */
@@ -61,7 +68,20 @@ a:link {
     display: flex;
     background-color: white;
     justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 4;
+}
 
+footer{
+    background-color: black;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    
 }
 
 #navigation > ul {
@@ -75,25 +95,92 @@ a:link {
     font-size: 25px;
     font-weight: 900;
     font-family: 'Source Code Pro', monospace;
-    
+}
+
+.welcomeDiv{
+    margin-top: 150px;
+
+}
+
+#articleCategory{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
 }
 
 .article-row {
     display: flex;
     background-color: rgba(29, 29, 29, 0.836);
     justify-content: flex-start;
-
+    flex-direction: column;
+    margin-top: 100px;
+    margin-left: -250px;
 }
 
 .article-comp {
-
     background-color: white;
     color: black;
     border-radius: 25px;
     padding: 15px;
     margin: 15px;
-    width: 500px;
+    width: 300px;
 
+    transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: linear;
 }
 
+.article-comp:hover{
+    background-color: purple
+} 
 
+
+.article-page{
+    background-color: white;
+    color: black;
+    padding: 20px;
+}
+  
+
+
+@media screen and (max-width: 480px){ 
+	#navigation {
+        flex-direction: column;
+
+    }
+
+    #navigation > ul {
+
+        flex-direction: column;
+
+    }
+
+    #navigation > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .welcomeDiv{
+        margin-top: 450px;
+    
+    }
+
+    .article-row {
+
+        flex-direction: column;
+        margin-top: 0px;
+    margin-left: 0px;
+
+    }
+
+    .article-comp {
+        width: 400px;
+
+    }
+
+    #articleCategory{
+        display: block;
+    
+    }
+}
