--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,21 @@ footer{
     font-family: 'Source Code Pro', monospace;
 }
 
+#navigation > img {
+    width:100px;
+    height:100px;
+    transition-property: width, height, transform;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+}
+
+
+#navigation > img:hover {
+    transform: skewY(20deg);
+    width:120px;
+    height:120px; 
+}
+
 .welcomeDiv{
     margin-top: 150px;
 
@@ -118,22 +133,53 @@ footer{
     margin-left: -250px;
 }
 
+
 .article-comp {
-    background-color: white;
-    color: black;
     border-radius: 25px;
     padding: 15px;
     margin: 15px;
     width: 300px;
 
-    transition-property: background-color;
-    transition-duration: 1s;
+    transition-property: border-color, border-width;
+    transition-duration: 0.2s;
     transition-timing-function: linear;
 }
 
 .article-comp:hover{
-    background-color: purple
+    border-color: teal;
+    border-width: 10px;
+    border-style: solid;
 } 
+
+#industry {
+
+    background-color: white;
+    color: black;
+
+}
+
+#technical {
+
+    background-color: black;
+    color: white;
+
+}
+
+#career {
+
+    background-color: purple;
+    color: white;
+
+}
+
+#featured{
+
+    font-size: 1.5em;
+    width: 600px;
+    background-color: white;
+    color: black;
+
+}
 
 
 .article-page{
